Drop down menu visibility will only show when the user clicks on the drop down menu button. So any other click will hide it. It still functions correctly, when the user clicks on a list item it will still navigate to the correct section, but will now close.

--- a/src/components/navigation/navigation_links/collapsed_links.scss
+++ b/src/components/navigation/navigation_links/collapsed_links.scss
@@ -1,45 +1,42 @@
-@import '../../../util/varibales';
+@import "../../../util/varibales";
 
 #bar_menu_container {
-    float: right;
-    height: 100%;
-    width: 2rem;
-    padding-right: 2rem;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: space-around;
-    align-items: center;
+  float: right;
+  height: 100%;
+  width: 2rem;
+  padding-right: 2rem;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-around;
+  align-items: center;
 }
 
 #drop_down_menu {
-    position: absolute;
-    top: 50px;
-    right: 22px;
-    background-color: #00000060;
-    list-style: none;
-    text-align: left;
-    padding: 1rem;
-    border: solid 1px black;
-    width: 10rem;
+  position: absolute;
+  top: 50px;
+  right: 22px;
+  background-color: #00000060;
+  list-style: none;
+  text-align: left;
+  padding: 1rem 1rem 1rem 0;
+  border: solid 1px black;
+  width: 10rem;
 
-    li {
-        font-family: $title-font;
-        font-size: $navigation-font-size;
-        color: $red-pink;
-        height: 2rem;
-        padding: 1rem 0 1rem 0;
-        border-bottom: solid 1px $red-pink;
+  li {
+    font-family: $title-font;
+    font-size: $navigation-font-size;
+    color: $red-pink;
+    height: 2rem;
+    padding: 1rem 0 1rem 1rem;
+    border-bottom: solid 1px $red-pink;
 
-        &:hover {
-            cursor: pointer;
-            color: white;
-        }
+    &:hover {
+      cursor: pointer;
+      color: white;
     }
-
-
+  }
 }
 
 #bars_menu:hover {
-    cursor: pointer;
-
+  cursor: pointer;
 }
